# mori_live2d

./: .gitmodules  ATTRIBUTION.md  README.md  __init__.py  cli.py  example_models.py  inochi2d_c_runtime.py  inochi_session.py  inox2d_runtime.py  puppet_inspect.py  util.py
love2d_frontend/: controller.lua  inochi2d_c.lua  inox2d.lua  lipsync.lua  main.lua  mori_live_io.lua
native/inox2d_ffi/: Cargo.toml
native/inox2d_ffi/src/: lib.rs
notes/: airi_puppet_control_compare.md
