[package]
name = "mori_inox2d_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = "0.29.0"
glow = "0.14.1"
inox2d = { path = "../../third_party/inox2d/inox2d" }
inox2d-opengl = { path = "../../third_party/inox2d/inox2d-opengl" }
libloading = "0.8"
once_cell = "1.19"
